--- a/nsec-secrets-update.yml
+++ b/nsec-secrets-update.yml
@@ -3,7 +3,7 @@ name: .NET NSec C Encrypt and Update Secrets
 on:
   workflow_dispatch:
     inputs:
-      message:
+      secret:
         description: 'New or updated Secret'
         required: true
         default: 'Use the Force, Luke!'
@@ -37,10 +37,10 @@ jobs:
                   static void Main(string[] args)
                   {
                       // Use the input message, or the default message if none is provided.
-                      string message = args.Length > 0 ? args[0] : "Use the Force, Luke!";
+                      string secret = args.Length > 0 ? args[0] : "Use the Force, Luke!";
 
                       // Convert the message to bytes.
-                      byte[] data = Encoding.UTF8.GetBytes(message);
+                      byte[] data = Encoding.UTF8.GetBytes(secret);
 
                       // Create an instance of the BLAKE2b algorithm.
                       var blake2b = new Blake2b();
@@ -82,7 +82,7 @@ jobs:
           dotnet restore
           dotnet build --configuration Release
           # Capture the output (the Base64 encoded BLAKE2b hash) from the run
-          OUTPUT=$(dotnet run --configuration Release -- "${{ github.event.inputs.message }}")
+          OUTPUT=$(dotnet run --configuration Release -- "${{ github.event.inputs.secret }}")
           echo "encrypted_secret=${OUTPUT}" >> $GITHUB_OUTPUT
           echo "Hash output: $OUTPUT"
 
