--- a/.github/workflows/secret-scanning-check.yml
+++ b/.github/workflows/secret-scanning-check.yml
@@ -1,9 +1,9 @@
 name: Secret Scanning Status Check
 
 on:
-  workflow_dispatch:
-  #pull_request:
-    #types: [opened, reopened]
+  # workflow_dispatch:
+  pull_request:
+    types: [opened, reopened]
     
 jobs:
   Secret-Scanning-Check:
