--- a/.github/workflows/secret-scanning-check.yml
+++ b/.github/workflows/secret-scanning-check.yml
@@ -4,7 +4,7 @@ permissions:
   pull-requests: write
 
 on:
-  # workflow_dispatch:
+  workflow_dispatch:
   pull_request:
     types: [opened, reopened]
     
